--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.86.3",
+    "plasmo": "0.87.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,7 +25,10 @@
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://github.com/*"
+    ],
+    "permissions": [
+      "webNavigation"
     ]
   }
 }
