--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-issue-toc",
   "displayName": "Github Issue TOC",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "It adds a table of contents to Github's issue pages for quick browsing and content navigation.",
   "author": "Frankie <1426203851@qq.com>",
   "scripts": {
@@ -31,5 +31,6 @@
     "permissions": [
       "webNavigation"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
