--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "github-issue-toc",
   "displayName": "Github Issue TOC",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "It adds a table of contents to Github's issue pages for quick browsing and content navigation.",
   "author": "Frankie <1426203851@qq.com>",
+  "packageManager": "pnpm@10.17.1",
   "scripts": {
     "dev": "plasmo dev  --target=chrome-mv3",
     "dev:edge": "plasmo dev --target=edge-mv3",
@@ -11,18 +12,18 @@
     "build:edge": "plasmo build --zip --target=edge-mv3"
   },
   "dependencies": {
-    "plasmo": "0.90.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "plasmo": "0.90.5",
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
-    "@types/chrome": "0.0.258",
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "prettier": "3.2.4",
-    "typescript": "5.3.3"
+    "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@types/chrome": "0.1.12",
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
+    "prettier": "3.6.2",
+    "typescript": "5.9.2"
   },
   "manifest": {
     "host_permissions": [
@@ -31,6 +32,5 @@
     "permissions": [
       "webNavigation"
     ]
-  },
-  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
+  }
 }
